--- a/index.html
+++ b/index.html
@@ -22,6 +22,42 @@
       </div>
     </div>
   </header>
+  <main>
+    <section>
+      <div class="goal">
+        <h2>My goal</h2>
+        <p>My goal is to become a developer. I like to develop in this direction and 
+          now I’m actively learning JS, HTML, CSS.</p>
+      </div>
+      <div class="skills">
+        <h2>Skills</h2>
+        <ul>
+          <li><span>Programming languages and technologies:</span> JavaScript, HTML, CSS</li>
+          <li><span>Tools:</span> GIT, VS Code</li>
+        </ul>
+      </div>
+      <div class="examples">
+        <h2>Code examples</h2>
+        <p>Code examples can be found <a href="https://github.com/antoprokopovich">here</a>.</p>
+      </div>
+      <div class="experience">
+        <h2>Experience</h2>
+        <p><span>Department of education, 2015 - 2017</span></p>
+        <p class="padding"><span>Position:</span> System administrator</p>
+        <p><span>OOO POSTTORG, 2018 - 2019</span></p>
+        <p><span>Position:</span> System administrator</p>
+      </div>
+      <div class="education">
+        <h2>Education</h2>
+        <p>Belarusian State University Of Informatics and Radioelectronics, Minsk, Belarus</p>
+        <p class="padding">Specialist(Bachelor Degree) - Information Security In Telecommunications</p>
+      </div>
+      <div class="english">
+        <h2>English</h2>
+        <p>Graduated in Pre-Intermediate (A2) English level courses.</p>
+      </div>
+    </section>
+  </main>
   
 </body>
 </html>
