feat: add footer

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Anton Prakapovich</title>
   <link rel="stylesheet" href="./reset.css">
   <link rel="stylesheet" href="./styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700,700i" rel="stylesheet">
 </head>
 <body>
   <header>
@@ -50,14 +51,18 @@
       <div class="education">
         <h2>Education</h2>
         <p>Belarusian State University Of Informatics and Radioelectronics, Minsk, Belarus</p>
-        <p class="padding">Specialist(Bachelor Degree) - Information Security In Telecommunications</p>
+        <p>Specialist(Bachelor Degree) - Information Security In Telecommunications</p>
       </div>
       <div class="english">
         <h2>English</h2>
-        <p>Graduated in Pre-Intermediate (A2) English level courses.</p>
+        <p class="padding">Graduated in Pre-Intermediate (A2) English level courses.</p>
       </div>
     </section>
   </main>
-  
+  <footer>
+    <div class="information">
+      <p>Created by Anton Prakapovich</p>
+    </div>
+  </footer>
 </body>
 </html>
